--- a/frontendmentor/bookmark-landing-page/styles/utils/_hero.css
+++ b/frontendmentor/bookmark-landing-page/styles/utils/_hero.css
@@ -9,7 +9,7 @@
 }
 
 .hero__illustration {
-  @apply py-12 relative;
+  @apply py-16 relative;
   grid-area: illustration;
 }
 
